Fix expectations